--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,6 +7,9 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
+// Sweetalert
+@import '~sweetalert2/src/sweetalert2.scss';
+
 body {
     padding-top: 70px;
 }
