aravel-5-7-par-la-pratique-gestion-de-ses-photos

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13522,6 +13522,12 @@ body {
   align-self: center;
 }
 
-.text-title, h1 {
-  color: white;
+a:hover {
+  text-decoration: none;
 }
+
+.star-rating {
+  direction: rtl;
+  display: block;
+}
+
